# chatbot-rust

./: .config.yml.example  .cursorignore  .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  GEMINI.md  README.md  capacitor.config.json  chat_logic_test.py  chatbot.py  design-privacy.md  design.md  docker-compose.yml  provider-test.py  provider-test.yml  requirements.txt  user_manager.py
.claude/: settings.local.json
.devcontainer/: Dockerfile  README.md  agent-container.sh  devcontainer.json
.devcontainer/rust-agent/: README.md  copy-to-repo.sh  devcontainer.base.json  install-grok.sh  post-create.sh  secret-overlays.mounts.json
.devcontainer/scripts/: post-create.sh  verify-secret-overlays.sh
.devcontainer/stubs/: .env
.github/: dependabot.yml
.github/codeql/: codeql-config.yml
.github/scripts/: tests.sh  verify_no_secrets.sh
.github/workflows/: ci.yml  codeql.yml  docker-build-push.yml  tests.yml
.grok/: sandbox.toml
android/: .project  build-apk.sh  build.gradle  gradle.properties
android/app/: .project  build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/chatbot/app/: MainActivity.java
android/app/src/main/java/com/chatbot/app/Logger/: LoggerPlugin.java
android/app/src/main/java/com/chatbot/app/NativeMic/: NativeMicPlugin.java
android/app/src/main/java/com/chatbot/app/NativeSecureKey/: NativeSecureKeyPlugin.java
android/app/src/main/java/com/chatbot/app/NativeVoiceTts/: NativeVoiceTtsPlugin.java
android/app/src/main/java/com/chatbot/app/car/: ChatbotCarAppService.java  VoiceScreen.java  VoiceSession.java
android/app/src/main/java/com/chatbot/app/util/: FileLogger.java
android/app/src/main/res/values/: arrays.xml  strings.xml
android/app/src/main/res/xml/: automotive_app_desc.xml  network_security_config.xml
app/: __init__.py  chat_logic.py  chatbot.py  config.py  routes.py  rust_bridge.py  tts.py  user_manager.py
app/llm/: base_provider.py  ollama_provider.py  openai_provider.py
app/static/: chat.js  style.css
app/templates/: chat.html  login.html  signup.html
chatbot-core/: Cargo.toml
chatbot-core/src/: chat.rs  chat_images.rs  config.rs  enc_key.rs  lib.rs  logging.rs  persistence.rs  rate_limit.rs  session.rs  user_store.rs
chatbot-core/src/history/: api.rs  cache.rs  crypto.rs  migration.rs  mod.rs  ops.rs  types.rs
chatbot-core/src/history/store/: keys.rs  mod.rs  tables.rs
chatbot-core/src/legacy_sets_json/: migrate.rs  mod.rs  store.rs
chatbot-cuda/: Dockerfile  pyproject.toml  requirements.txt  start.sh
chatbot-cuda/src/: audio_utils.py  main.py  models.py
chatbot-server/: .config.yml  Cargo.toml
chatbot-server/src/: background.rs  brave.rs  chat.rs  chat_utils.rs  health.rs  home.rs  http_error.rs  lib.rs  login.rs  logout.rs  mcp.rs  memory.rs  preferences.rs  rate_limit_middleware.rs  regenerate.rs  reset_chat.rs  responses.rs  search.rs  sets.rs  signup.rs  stt.rs  test_instrumentation.rs  tools.rs  tts.rs
chatbot-server/src/auth/: mod.rs
chatbot-server/src/providers/: message_utils.rs  mod.rs  ollama.rs  openai.rs  xai.rs
chatbot-server/tests/: chat.rs  chat_ollama.rs  client_derivation.rs  csp.rs  csrf_bypass.rs  delete_message.rs  edit_message.rs  enc_key_auth.rs  expired_session.rs  expired_session_save.rs  health.rs  history_robustness.rs  home.rs  http_errors.rs  ip_extraction.rs  login.rs  logout.rs  memory.rs  memory_limit.rs  native_audio_wav.rs  preferences.rs  rate_limit.rs  regenerate.rs  reset_chat.rs  search.rs  session_purge.rs  set_privacy.rs  sets.rs  sets_auth.rs  signup.rs  tts.rs  tts_fish.rs  tts_markdown.rs
chatbot-server/tests/common/: mod.rs
chatbot-test-support/: Cargo.toml
chatbot-test-support/src/: lib.rs
deploy/compose/: README.md  docker-compose.dev.override.yml  docker-compose.prod.override.yml
deploy/helm/chatbot/: Chart.yaml  README.md  values.yaml
deploy/helm/chatbot/templates/: _helpers.tpl  configmap.yaml  webserver-deployment.yaml  webserver-pvc.yaml  webserver-service.yaml
docs/: design-history-store.md  design-privacy.md  design.md  frontends.md  mobile-apps.md  rust-refactor.md  tts-streaming.txt  web-auth-history.md
rust/: Cargo.toml
rust/chatbot-core/: Cargo.toml
rust/chatbot-core/src/: bridge.rs  chat.rs  config.rs  lib.rs  persistence.rs  session.rs
rust/chatbot-server/: Cargo.toml
rust/chatbot-server/src/: chat.rs  chat_utils.rs  health.rs  home.rs  lib.rs  login.rs  logout.rs  main.rs  memory.rs  regenerate.rs  reset_chat.rs  sets.rs  signup.rs  test_instrumentation.rs  tts.rs  user_store.rs
rust/chatbot-server/src/providers/: ollama.rs  openai.rs
rust/chatbot-server/tests/: chat.rs  chat_logic_python.rs  chat_ollama.rs  health.rs  home.rs  login.rs  logout.rs  memory.rs  regenerate.rs  reset_chat.rs  sets.rs  signup.rs  static_assets.rs  tts.rs
rust/chatbot-server/tests/common/: mod.rs
rust/chatbot-test-support/: Cargo.toml
rust/chatbot-test-support/src/: lib.rs
scripts/: dismiss-codeql-hardcoded-alerts.sh  verify_no_secrets.sh
static/: chat.js  enc-key.js  login.js  native-audio.js  native-bridge.js  style.css
static/templates/: chat.html  login.html  signup.html
templates/: chat.html  login.html  signup.html
tests/: conftest.py  test_route_bridge.py  test_security_surface.py  test_static_protection.py
