[package]
name = "chatbot-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "chatbot_core"
path = "src/lib.rs"
crate-type = ["rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
once_cell = "1"
regex = "1"
serde_yaml = "0.9"
dotenvy = "0.15"
tracing = "0.1"
thiserror = "1.0"
fernet = { version = "0.2", default-features = false, features = ["openssl"] }
bcrypt = "0.15"
pbkdf2 = "0.12"
rand = { version = "0.8", features = ["std"] }
sha2 = "0.10"
dashmap = "5"

[dev-dependencies]
tempfile = "3"
