[package]
name = "chatbot-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "chatbot_core"
path = "src/lib.rs"
crate-type = ["rlib"]

[dependencies]
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"
base64 = "0.22.1"
once_cell = "1.21.3"
regex = "1.11.2"
serde_yaml = "0.9.34"
dotenvy = "0.15.7"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["fmt", "env-filter", "json"] }
thiserror = "1.0.69"
fernet = { version = "0.2.2", default-features = false, features = ["openssl"] }
bcrypt = "0.15.1"
pbkdf2 = "0.12.2"
rand = { version = "0.8.5", features = ["std"] }
sha2 = "0.10.9"
hmac = "0.12.1"
dashmap = "5.5.3"
zeroize = { version = "1.8.1", features = ["zeroize_derive"] }
redb = "2.6.3"
uuid = { version = "1.23.4", features = ["v4", "serde"] }
aes-gcm = "0.10.3"
hkdf = "0.12.4"

[dev-dependencies]
tempfile = "3.22.0"
