[project]
name = "chatbot-cuda"
version = "0.1.0"
description = "Unified CUDA Service (STT, TTS, LLM) for Chatbot"
requires-python = ">=3.10,<3.12"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "torch>=2.1.0",
    "torchaudio>=2.1.0",
    "numpy<2.0.0", 
    "kokoro>=0.3.4",
    "soundfile>=0.12.1",
    "pydantic>=2.0.0",
    "python-multipart>=0.0.9",
    # Fish Speech dependencies (subset)
    "hydra-core>=1.3.2",
    "transformers>=4.36.0",
    # NeMo for Parakeet
    "nemo_toolkit[asr] @ git+https://github.com/NVIDIA/NeMo.git@main",
]

[tool.uv]
# Optional config
