[package]
name = "chatbot-server"
version = "0.1.0"
edition = "2021"

[lib]
name = "chatbot_server"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
axum = "0.7"
chatbot-core = { path = "../chatbot-core" }
tokio = { version = "1.37", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tower-http = { version = "0.5", features = ["fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"
regex = "1"
once_cell = "1"
bcrypt = "0.15"
tower = "0.5"
urlencoding = "2"
base64 = "0.22"
pbkdf2 = "0.12"
rand = { version = "0.8", features = ["std"] }
sha2 = "0.10"
bytes = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
tokio-stream = "0.1"
async-stream = "0.3"
futures-util = "0.3"
minijinja = { version = "1.0", features = ["builtins", "json"] }
pulldown-cmark = "0.9"

[dev-dependencies]
tempfile = "3"
tracing-appender = "0.2"
chatbot-test-support = { path = "../chatbot-test-support" }
