[package]
name = "chatbot-server"
version = "0.1.0"
edition = "2021"

[lib]
name = "chatbot_server"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.99"
axum = { version = "0.7.9", features = ["multipart"] }
chatbot-core = { path = "../chatbot-core" }
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros", "time"] }
tracing = "0.1.41"
tower-http = { version = "0.5.2", features = ["fs"] }
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"
serde_urlencoded = "0.7.1"
regex = "1.11.2"
once_cell = "1.21.3"
bcrypt = "0.19.2"
tower = "0.5.2"
urlencoding = "2.1.3"
base64 = "0.22.1"
pbkdf2 = "0.12.2"
rand = { version = "0.8.5", features = ["std"] }
sha2 = "0.10.9"
bytes = "1.10.1"
reqwest = { version = "0.12.23", default-features = false, features = ["json", "stream", "rustls-tls", "multipart"] }
tokio-stream = "0.1.17"
async-stream = "0.3.6"
futures-util = "0.3.31"
minijinja = { version = "1.0.22", features = ["builtins", "json"] }
pulldown-cmark = "0.9.6"
async-openai = "0.35.0"

[dev-dependencies]
tempfile = "3.22.0"
tracing-subscriber = { version = "0.3.20", features = ["fmt", "env-filter"] }
tracing-appender = "0.2.3"
chatbot-test-support = { path = "../chatbot-test-support" }
