[package]
name = "chatbot-test-support"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22"
bcrypt = "0.15"
chatbot-core = { path = "../chatbot-core" }
axum = "0.7"
regex = "1"
serde_json = "1.0"
tempfile = "3"
tower = "0.5"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "std"] }
