[package]
name = "chatbot-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "chatbot_core"
path = "src/lib.rs"
crate-type = ["rlib"]

[dependencies]
pyo3 = { version = "0.26", features = ["auto-initialize"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
