[package]
name = "chatbot-server"
version = "0.1.0"
edition = "2021"

[lib]
name = "chatbot_server"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
axum = "0.7"
chatbot-core = { path = "../chatbot-core" }
tokio = { version = "1.37", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tower-http = { version = "0.5", features = ["fs"] }

[dev-dependencies]
tempfile = "3"
